package input;

import calculation.Node;

public class _InputQueue {

    Node
            head,
            tail;


}