@startuml
/'
package input{
abstract _InputQueue
}
'/
package calculation{
abstract _EquationTree{
{static} Node leftSlot
{static} Node rootSlot
{static} Node riteSlot
'{static} bool leftNull
'{static} bool rootNull
'{static} bool riteNull
}

abstract Node{
{static} Node mainRoot
{field} Node localRoot
{field} Node localLeft
{field} Node localRite
{field} dbl value = NaN
{field} NodeType type

}
enum NodeType{
BRACKET_IN,
BRACKET_OUT
OPERATOR
OPERAND
}

class Value{
{static} NodeType classType
}

abstract Calculation{
{static} NodeType classType
}

class Calculation_Addition{
{method} @Override calculate
}

/'
package gui{
class MainFrame
class MainDisplay
class mainPanel
class Settings
}'/


_EquationTree o.. _EquationTree
_EquationTree o-- Node
Node o.. Node
Node .. NodeType
Node <|--Value : ext
Node <|-- Calculation : ext
Calculation <--Calculation_Addition : impl
Calculation *.. Value
'Calculation
Calculation -- NodeType
Value -- NodeType



@enduml